# scigl_render

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  scigl_render-config.cmake  scigl_renderConfig.cmake.in
include/scigl_render/: gl_context.h  gl_context.hpp
include/scigl_render/example/: check_gl_error.hpp  example_render.h  example_render.hpp
include/scigl_render/render/: frame_buffer.hpp  offscreen_render.h  offscreen_render.hpp  texture_fullscreen_render.h  texture_fullscreen_render.hpp
include/scigl_render/scene/: camera.h  camera.hpp  camera_intrinsics.hpp  cv_camera.hpp  diffuse_light.h  diffuse_light.hpp  diffuse_texture.h  material.hpp  mesh.h  mesh.hpp  model.h  model.hpp  pose.h  pose.hpp  stb_image.h  vertex.hpp
include/scigl_render/shader/: depth_shader.h  depth_shader.hpp  shader.hpp  single_texture_shader.h  single_texture_shader.hpp
model/: beckenkamm.3ds  beckenkamm.blend  coke.3ds  coordinates.3ds  coordinates.blend  coordinates.blend1  coordinates.mtl  monkey.3ds  monkey.blend  monkey.blend1  monkey.stl
src/: gl_context.cpp
src/example/: example_render.cpp  scigl_depth_viewer.cpp  scigl_viewer.cpp  viewer_app.cpp
src/render/: frame_buffer.cpp  offscreen_render.cpp  texture_fullscreen_render.cpp
src/scene/: camera.cpp  camera_intrinsics.cpp  cv_camera.cpp  diffuse_light.cpp  mesh.cpp  model.cpp
src/shader/: depth_shader.cpp  shader.cpp  single_texture_shader.cpp
